# CompileAgent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: card_effects_1.md  card_effects_2.md  cards.json  rules.txt
docs/: CROSS_VALIDATION.md  STRATEGY_THESIS_sparkv4.md  STRATEGY_THESIS_sparkv5.md  mcts-distillation.md  model-card-sparkv1.md  model-card-sparkv3.md  model-card-sparkv5.md  nn_design.md  sparkv4-strategy-analysis.md  strategy-analysis.md
scripts/: benchmark.py  eval_nn.py  eval_run.sh  play_random.py  plot_metrics.py  review_game.py  train.sh  train_loose_policy.sh  train_nn.py
scripts/analysis/: README.md  _lib.py  card_embeddings.py  decision_diff.py  discoveries.py  ladder.py  protocol_meta.py  style_fingerprint.py
scripts/audit/: verify_cards.py
scripts/az/: diagnose.py  diagnose_loop.sh  evaluate_run.py  train.sh  watch.py
scripts/distill/: epoch_sweep.sh  generate_labels.py  run.sh  run_mixed.sh  train.py
scripts/eval/: _lib.py  card.py  collect.py  compare.py  counterfactual_draft.py  export_onnx.py  h2h_breakdown.py  ladder.py  mcts_diagnostic.py  metrics.py  plot.py  strategy.py
src/compile_engine/: __init__.py  actions.py  agents.py  cards.py  effects.py  env.py  game.py  state.py
tests/: conftest.py  test_engine.py  test_nn.py
webapp/: drizzle.config.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
webapp/app/: globals.css  layout.tsx  page.tsx
webapp/components/: bug-report-dialog.tsx  cards-browser.tsx  (+7 more)
(+50 files in other folders)
