[project]
name = "compile-engine"
version = "0.1.0"
description = "A scalable engine for the Compile card game, with an RL-ready environment."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "numpy>=1.26"]
nn = ["torch>=2.2", "numpy>=1.26"]
plot = ["matplotlib>=3.7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
